Forsøg på biblatex - fejlet

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,20 @@
 \documentclass[11pt,a4paper]{book}
 \usepackage{preamble}
+
+\usepackage[backend=biber]{biblatex}
+\addbibresource{bibliografi.bib}
+
+
 \author{Mikkel B. Goldschmidt \\ 3r, Nørre Gymnasium \\ SRP i matematik og fysik}
 \title{Dæmpede svingninger og differentialligninger}
+
+
 \begin{document}
 \maketitle
 
+Test\cite{FysikA}
+
+
+\printbibliography
 
 \end{document}
