Working but semi manual bibliography

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,13 @@
 \documentclass[11pt,a4paper]{book}
 \usepackage{preamble}
+\usepackage{referencekommandoer}
+
 \author{Mikkel B. Goldschmidt \\ 3r, Nørre Gymnasium \\ SRP i matematik og fysik}
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
 \maketitle
+
+\input{bibliografi}
 
 
 \end{document}
