Hooks lov - introduktion

--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -4,3 +4,9 @@ For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pen
 Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvændigvis efterprøve dem eksperimentielt eller forklare den mere teoretiske baggrund. 
 
 \section{Nødvendig baggrundsteori}
+\subsection{Hooks lov}\label{teori:Hooks lov}
+Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen. 
+Dette giver anledning til formlen 
+$$F =k\cdot x$$
+hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjedderen trækker med og $k$ er propertionalitetskonstanten. 
+$k$ kaldes i denne sammenhæng for fjedderkonstanten.
