--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,8 @@
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
 \maketitle
+\input{Kapitel1/1Baggrund}
+
 
 \input{bibliografi}
 
