Newtons anden lov

--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -1,12 +1,16 @@
 \chapter{Introduktion af problemet}
 Jeg vil i denne opgave tage udgangspunkt i en bevægelse, som jeg vil forsøge at begrunde og beskrive. 
 For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine uledninger. 
-Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvændigvis efterprøve dem eksperimentielt eller forklare den mere teoretiske baggrund. 
+Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentielt eller forklare den mere teoretiske baggrund. 
 
 \section{Nødvendig baggrundsteori}
 \subsection{Hooks lov}\label{teori:Hooks lov}
-Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen. 
+Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
 $$F =k\cdot x$$
 hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjedderen trækker med og $k$ er propertionalitetskonstanten. 
 $k$ kaldes i denne sammenhæng for fjedderkonstanten.
+
+\subsection{Newtons anden lov}\label{teori:Newtons anden lov}
+Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
+Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
