Updated error in references

--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -10,8 +10,8 @@
  
 \bibitem{FysikA}
   Knud Erik Nielsen og Esper Fogh,
-  (2007, s. 187-195). 
-  Vejen til fysik A2 (1. udgave). 
+  (2011, s. \textbf{???Tjek efter???}). 
+  Vejen til fysik A2 (2. udgave). 
   Silkeborg,
   Forlaget Hax
 
