--- a/referencekommandoer.sty
+++ b/referencekommandoer.sty
@@ -1,3 +1,3 @@
 \ProvidesPackage{referencekommandoer}
 
-\newcommand{\refFysA}[1]{\footnote{Nielsen, Fogh, m.fl. , 2007, s. #1 \cite{FysikA} }}
+\newcommand{\refFysA}[1]{\footnote{Nielsen og Fogh , 2011, s. #1 \cite{FysikA} }}
