Added Mekanik reference

--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -15,6 +15,12 @@
   Silkeborg,
   Forlaget Hax
 
+\bibitem{Mekanik}
+  Gunnar Christiansen, Erik Both og Preben Østergaard Sørensen,
+  (2002, s. "9-11" - "9-22"). 
+  Mekanik. 
+  Lyngby,
+  Stougaard Jensen/Albertlund
   
   
 \end{thebibliography}
