--- a/referencekommandoer.sty
+++ b/referencekommandoer.sty
@@ -1,3 +1,4 @@
 \ProvidesPackage{referencekommandoer}
 
 \newcommand{\refFysA}[1]{\footnote{Nielsen og Fogh , 2011, s. #1 \cite{FysikA} }}
+\newcommand{\refMekanik}[1]{\footnote{Christiansen, Both og Østergaard , 2002, s. #1 \cite{Mekanik} }}
