--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -3,7 +3,7 @@ Jeg vil i denne opgave tage udgangspunkt i en bevægelse, som jeg vil forsøge a
 For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine uledninger. 
 Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentielt eller forklare den mere teoretiske baggrund. 
 
-\section{Nødvendig baggrundsteori}
+\section{Nødvendig baggrundsteori fra fysik A pensum}
 \subsection{Hooks lov}\label{teori:Hooks lov}
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
@@ -14,3 +14,8 @@ $k$ kaldes i denne sammenhæng for fjedderkonstanten.
 \subsection{Newtons anden lov}\label{teori:Newtons anden lov}
 Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
 Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
+
+\section{Nødvendig baggrundsteori udenfor pensum}
+\subsection{Vindmodstand}\label{teori:vindmodstand}
+Når et objekt bevæger sig gennem luft eller en væske med en hastighed $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre hastigheden mindre. 
+Ved lave hastigheder er denne formindskelse proportionel med hastigheden i første, men ved højere hastigheder vil den nærmere være proportional med hastigheden opløftet i anden potens\refMekanik{11}. 
