--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -8,8 +8,8 @@ Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nø
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
 $$F =k\cdot x$$
-hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjedderen trækker med og $k$ er propertionalitetskonstanten. 
-$k$ kaldes i denne sammenhæng for fjedderkonstanten.
+hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjederen trækker med og $k$ er proportionalitetskonstanten. 
+$k$ kaldes i denne sammenhæng for fjederkonstanten.
 
 \subsection{Newtons anden lov}\label{teori:Newtons anden lov}
 Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
