Start på forklaring af forsøgsopsætning.

--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -1,7 +1,7 @@
 \chapter{Introduktion af problemet}
 Jeg vil i denne opgave tage udgangspunkt i en bevægelse, som jeg vil forsøge at begrunde og beskrive. 
-For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine uledninger. 
-Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentielt eller forklare den mere teoretiske baggrund. 
+For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine udledninger. 
+Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentelt eller forklare den mere teoretiske baggrund. 
 
 \section{Nødvendig baggrundsteori fra fysik A pensum}
 \subsection{Hooks lov}\label{teori:Hooks lov}
