--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper]{book}
 \usepackage{preamble}
+\usepackage{opstilling}
 \usepackage{referencekommandoer}
 
 \author{Mikkel B. Goldschmidt \\ 3r, Nørre Gymnasium \\ SRP i matematik og fysik}
@@ -7,7 +8,7 @@
 \begin{document}
 \maketitle
 \input{Kapitel1/1Baggrund}
-
+\input{Kapitel1/OpsatningBeskrivelse}
 
 \input{bibliografi}
 
