--- a/preamble.sty
+++ b/preamble.sty
@@ -5,4 +5,9 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+
+\usepackage{tikz}
+\usetikzlibrary{calc,patterns,decorations.pathmorphing,decorations.markings}
+
+
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
