Added y'=ky theorem

--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -2,8 +2,9 @@
 Jeg vil i denne opgave tage udgangspunkt i en bevægelse, som jeg vil forsøge at begrunde og beskrive. 
 For at dette er muligt, er jeg dog nødt til kort at introducere en smule af pensum fra gymnasiet, som vil blive brugt i mine udledninger. 
 Denne del af pensum vil jeg kun redegøre for, og jeg vil altså derfor ikke nødvendigvis efterprøve dem eksperimentelt eller forklare den mere teoretiske baggrund. 
+Den del der er matematik, vil jeg dog føre bevis for.
 
-\section{Nødvendig baggrundsteori fra fysik A pensum}
+\section{Nødvendig baggrundsteori fra pensum}
 \subsection{Hooks lov}\label{teori:Hooks lov}
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
@@ -15,7 +16,55 @@ $k$ kaldes i denne sammenhæng for fjederkonstanten.
 Newtons anden lov fortæller ud fra den kraft et objekt påvirkes med og dets masse, hvor stor meget objektet vil accelerere. 
 Den siger, at massen ganget med accelerationen af et objekt giver den kraft, som objektet bliver påvirket med\refFysA{217}.
 
+\subsection{Differentialligninger}
+\newcommand{\LosEks}{$ \{ c\cdot e^{kx}|c\in \mR \} $}%Bruges i sætningen
+Ved en differentialligning forstår vi en funktionnalligning hvor en funktionen minimum et sted er differentieret en gang.
+En funktionalligning er en ligning hvor det er en funktion der er den ubekendte. 
+Med en løsning til en differentialligning refererer jeg fremover til en funktion der gør differentialligningen sand. 
+Ved den fuldstændige løsning til en differentialligning, refererer jeg fremover til mængden af \emph{alle} løsninger til differentialligningen. 
+Nedenfor er et eksempel på en differentialligning. 
+Denne er taget med både som eksempel og for at gøre udregninger mere tilgængelige senere.
+
+\begin{thm}\label{thm:y'=k*y}
+Lad $y$ være en differentialbel funktion og $k\in \mR$. Da har  differentialligningen $y' = ky$ den fuldstændige løsning \LosEks.
+\end{thm}
+\begin{proof}
+Først vil jeg vise at alle funktioner i den påståede fuldstændige løsning er løsninger til differentialligningen.
+Antag af $g$ er en løsning og derfor ligger i \LosEks .
+Da er $g=c\cdot e^{kx}$ for et eller andet reelt tal $c$.
+Jeg indsætter da løsningen i ligningen: 
+
+\begin{align*}
+y' &= ky\\
+g' &= kg\\
+(c\cdot e^{kx})' &= k\cdot c\cdot e^{kx}\\
+k\cdot c\cdot e^{kx} &= k\cdot c\cdot e^{kx}\\
+\end{align*}
+\end{proof}
+Jeg ser da at de to sider er lig hinanden og dermed at $g$ er en løsning. 
+
+Nu vil jeg vise at hvis en funktion $h$ er en løsning til differentialligninger, da vil $h$ ligge i \LosEks.
+Antag da netop at $h$ er en løsning til differentialligningen. 
+Dermed ved vi at $h'=k\cdot h$.
+Jeg vil nu lave omskrivninger på denne ligning. 
+For at gøre disse omskrivninger nemmere vil jeg definere en funktion $s=e^{-kx}$, som vi ved at differentiere indser opfylder at $s'=k \cdot e^{-kx} = -ks$.
+Ved omskrivning ses da:
+\begin{align*}
+h'&=k\cdot h \\
+h'-kh &= 0\\
+h's-ksh&=0 		& \text{(Ganger med }s\text{)}\\
+h's+s'h&=0		& \text{(Ses ved den før omtalte egenskab for $s$)}\\
+(hs)'&=0		&\text{(Ses ved kædereglen)}\\
+hs+c_1 &= 0		&\text{(Ses ved at integrere, $c_1$ er integrationskonstant)}\\
+h&= -c_1 \cdot \frac{1}{s}\\
+h&= -c_1 \cdot e^{kx}
+\end{align*}
+Da ser vi at $h$ må være på formen en konstant ganget med $e^{kx}$, hvilet netop karakteriserer elementer i \LosEks. 
+Dermed ligger $h$ i \LosEks.
+Da er vist at hvis en funktion er en løsning til differentialligningen er ligger det også i \LosEks og det er også vist at hvis et element ligger i \LosEks da er det også en løsning. 
+Dermed er \LosEks den fuldstændige løsning til differentialligningen. 
+
 \section{Nødvendig baggrundsteori udenfor pensum}
 \subsection{Vindmodstand}\label{teori:vindmodstand}
-Når et objekt bevæger sig gennem luft eller en væske med en hastighed $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre hastigheden mindre. 
+Når et objekt bevæger sig gennem luft eller en væske med en hastighed $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre hastigheden mindre.
 Ved lave hastigheder er denne formindskelse proportionel med hastigheden i første, men ved højere hastigheder vil den nærmere være proportional med hastigheden opløftet i anden potens\refMekanik{11}. 
