--- a/Kapitel1/1Baggrund.tex
+++ b/Kapitel1/1Baggrund.tex
@@ -56,7 +56,7 @@ h's+s'h&=0		& \text{(Ses ved den før omtalte egenskab for $s$)}\\
 (hs)'&=0		&\text{(Ses ved kædereglen)}\\
 hs+c_1 &= 0		&\text{(Ses ved at integrere, $c_1$ er integrationskonstant)}\\
 h&= -c_1 \cdot \frac{1}{s}\\
-h&= -c_1 \cdot e^{kx}
+h&= -c_1 \cdot e^{kx} &\text{(Ses ved $\frac{1}{s}=\frac{1}{e^{-kx}} = e^{kx}$)}
 \end{align*}
 Da ser vi at $h$ må være på formen en konstant ganget med $e^{kx}$, hvilet netop karakteriserer elementer i \LosEks. 
 Dermed ligger $h$ i \LosEks.
