Startede på at opskrive differentialligning

--- a/Kapitel1/OpsatningBeskrivelse.tex
+++ b/Kapitel1/OpsatningBeskrivelse.tex
@@ -2,13 +2,17 @@
 Hele denne opgave tager udgangspunkt i et forsøg.
 I forsøget hænges et lod op i en fjeder der opfylder Hooks lov (se \ref{teori:Hooks lov}). 
 Da tilføres loddet energi, således at det begynder at svinge. 
-På figur \ref{fig:Basis Forsogsopsaetning} ses en skitse af forsøgets opsætning. 
+På figur \ref{fig:Basis Forsogsopsaetning} ses en skitse af forsøgets opsætning.
 
-
-\begin{figure}[ht]
+\begin{figure}[h]
 \center
 \opstilling{-1}%Se opstilling.sty i hovedmappen for definition. Ser bedst ud med udgangsposition i -1.
 
 \caption{Skitse af forsøgsopsætning.}
 \label{fig:Basis Forsogsopsaetning}
-\end{figure}
+\end{figure} 
+Man kan da overveje, hvilke kræfter der påvirker loddet. 
+Det er klart at loddet er påvirket af en tyngdekraft. 
+Derudover er loddet påvirket af kraften fra fjederen.
+Til sidst vil loddets bevægelse også være påvirket af luften omkring den hvis loddet er sat i bevægelse. 
+
