--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
 \maketitle
+\tableofcontents
+
 \input{Kapitel1/1Baggrund}
 \input{Kapitel1/OpsatningBeskrivelse}
 
