--- a/Kapitel1/OpsatningBeskrivelse.tex
+++ b/Kapitel1/OpsatningBeskrivelse.tex
@@ -4,13 +4,13 @@ I forsøget hænges et lod op i en fjeder der opfylder Hooks lov (se \ref{teori:
 Da tilføres loddet energi, således at det begynder at svinge. 
 På figur \ref{fig:Basis Forsogsopsaetning} ses en skitse af forsøgets opsætning.
 
-\begin{figure}[h]
-\center
+\begin{wrapfigure}{r}{0.4\textwidth}
+\centering
 \opstilling{-1}%Se opstilling.sty i hovedmappen for definition. Ser bedst ud med udgangsposition i -1.
 
 \caption{Skitse af forsøgsopsætning.}
 \label{fig:Basis Forsogsopsaetning}
-\end{figure} 
+\end{wrapfigure} 
 
 \subsection{Teoretiske egenskaber for bevægelsen}
 Man kan da overveje, hvilke kræfter der påvirker loddet. 
