--- a/preamble.sty
+++ b/preamble.sty
@@ -6,6 +6,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
+\usepackage{wrapfig}
+
 \usepackage[colorlinks = true,
             linkcolor = blue,
             urlcolor  = blue,
