Added DTU reference

--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -22,5 +22,9 @@
   Lyngby,
   Stougaard Jensen/Albertlund
   
+\bibitem{DTU-Kompleks}
+(11. december 2016, Sætning 29.44), Komplekse tal. Hentet fra:
+\url{http://01005.mat.dtu.dk/materialer/enoter/afsnit/NUID43-tn29/}
+  
   
 \end{thebibliography}
