Den komplekse eksponentialfunktion

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \input{Kapitel1/OpsatningBeskrivelse}
 
 \input{Kapitel2/Introduktion}
-
+\input{Kapitel2/DenKomplekseEksponentialfunktion}
 
 \input{bibliografi}
 
