--- a/preamble.sty
+++ b/preamble.sty
@@ -59,6 +59,9 @@
 \newcommand{\mQ}{\mathbb{Q}}
 \newcommand{\mC}{\mathbb{C}}
 
+%Den komplekse eksponentialfunktion
+\newcommand{\eC}{exp_\mC}
+
 
 
 
