Added Kalkulus reference

--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -25,6 +25,13 @@
 \bibitem{DTU-Kompleks}
 (11. december 2016, Sætning 29.44), Komplekse tal. Hentet fra:
 \url{http://01005.mat.dtu.dk/materialer/enoter/afsnit/NUID43-tn29/}
+
+\bibitem{Kalkulus}
+  Tom Lindstrøm,
+  (2006, s. 529-541). 
+  Kalkulus (3. udgave). 
+  Oslo,
+  Universitetsforlaget
   
   
 \end{thebibliography}
