--- a/referencekommandoer.sty
+++ b/referencekommandoer.sty
@@ -3,3 +3,4 @@
 \newcommand{\refFysA}[1]{\footnote{Nielsen og Fogh , 2011, s. #1 \cite{FysikA} }}
 \newcommand{\refMekanik}[1]{\footnote{Christiansen, Both og Østergaard , 2002, s. #1 \cite{Mekanik} }}
 \newcommand{\refDTUKompleks}[1]{\footnote{Komplekse tal, 2016, sætning #1 \cite{DTU-Kompleks}}}
+\newcommand{\refKalkulus}[1]{\footnote{Lindstrøm , 2006, s. #1 \cite{Kalkulus} }}
