--- a/Kapitel1/OpsatningBeskrivelse.tex
+++ b/Kapitel1/OpsatningBeskrivelse.tex
@@ -1,4 +1,4 @@
-\section{Forsøgsopsætning}
+\section{Forsøgsopsætning}\label{teori: opsatning af differentialligninger}
 Hele denne opgave tager udgangspunkt i et forsøg.
 I forsøget hænges et lod op i en fjeder der opfylder Hooks lov (se \ref{teori:Hooks lov}). 
 Da tilføres loddet energi, således at det begynder at svinge. 
