Tilføjede forklarende tekst om valg af tilfælde

--- a/Kapitel2/AndenOrden.tex
+++ b/Kapitel2/AndenOrden.tex
@@ -33,5 +33,9 @@ Det vil vise sig senere, at en tilhørende andengradsligning til en lineær ande
 \begin{definition}[Karakterligningen]
 Karakterligningen for en lineær andenordens differentialligning $y'' + by' + cy = 0$, er ligningen $r^2 + br + c = 0$. 
 Denne ligning har som bekendt en eller to komplekse løsninger $r_1 = \frac{-b + \sqrt{b^2 - 4c}}{2}$ og $r_2 = \frac{-b - \sqrt{b^2 - 4c}}{2}$. .
-
 \end{definition}
+
+Jeg vil i denne udledning kigge på to tilfælde af karakterligningen. 
+Der hvor den har to komplekse løsninger og der hvor den har to reelle.
+Grunden til at jeg ikke kigger på der hvor den har en reel rod, er at det kræver at $b^2 = 4c$ (da dette gør diskriminanten til $0$), hvilket er et særligt specialtilfælde, som meget sjældent vil forekomme i fysikken.
+
