--- a/Vejledning/vejledning.tex
+++ b/Vejledning/vejledning.tex
@@ -14,10 +14,24 @@
 \section*{Spørgsmål}
 \begin{enumerate}
 	\item Dæmpningsledets fortegn
+		\begin{itemize}
+			\item Det er ikke et problem grundet at de er vektorer...
+		\end{itemize}
 	\item Opstilling af differentialligning. Hvad med tyngdekraften?
+		\begin{itemize}
+			\item Sæt nulpunkt der hvor loddet hænger fr start
+		\end{itemize}
 	\item Eksponentialfunktionen på komplekse tal
 	\item Kompleks løsning af karakterligningen
 	
-	\item 
+	\item Teknologiske perspektiveringer
+	\begin{itemize}
+		\item Støddæmpere
+		\item broer der svinger - Tacoma Bridge (bro der gik i egensvingning)
+		\item Alt hvad der drejer kan svinge
+		\item Affjedring af bil
+		\item Penduler
+		\item 
+	\end{itemize}
 \end{enumerate}
 \end{document}
