--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{book}
+\documentclass[11pt,a4paper,openany]{book}
 \usepackage{preamble}
 \usepackage{opstilling}
 \usepackage{referencekommandoer}
