Changed line spacing

--- a/preamble.sty
+++ b/preamble.sty
@@ -68,5 +68,7 @@
 \usepackage{tikz}
 \usetikzlibrary{calc,patterns,decorations.pathmorphing,decorations.markings}
 
+\linespread{1.2}
+
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
