Den ikke linære differentialligning

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,7 @@
 \input{Kapitel2/DenKomplekseEksponentialfunktion}
 \input{Kapitel2/AndenOrden}
 \input{Kapitel2/AndenOrdenKompleks}
+\input{Kapitel2/IkkeLinear}
 
 \input{bibliografi}
 
