--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 \input{Kapitel2/IkkeLinear}
 
 \input{Kapitel3/Introduktion}
+\input{Kapitel3/Eksperiment1}
+\input{Kapitel3/Eksperiment2}
+\input{Kapitel3/Eksperiment3}
 
 \input{bibliografi}
 
