Skrev udførsel og materialer til forsøg 1 + tegnede figur

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -1,6 +1,39 @@
+\pagebreak
 \section{Forsøg: Svingning af lod i luft i kort tid}
 
 \subsection{Forsøgsbeskrivelse}
+\subsubsection{Materialer}
+\begin{wrapfigure}{r}{0.4\textwidth}
+\centering
+\opstillingEt{-1}%Se opstilling.sty i hovedmappen for definition. Ser bedst ud med udgangsposition i -1.
+
+\caption{Skitse af forsøgsopsætning til forsøg 1. Den grå figur under loddet er en ultralydsensor.}
+\label{fig:Forsogsopsaetning 1}
+\end{wrapfigure} 
+
+Disse materialer blev brugt til forsøget:
+\begin{itemize}
+	\setlength\itemsep{-1em}
+	\item Lod
+	\item Fjeder
+	\item Kraftmåler
+	\item Tavlelineal ($1$ meter)
+	\item Stativ til opsætning
+	\item Ultralydsensor
+	\item Computer til opsamling af data
+\end{itemize}
+
+\subsubsection{Udførelse}
+
+
+
+Før selve udførslen af forsøget, bestemmer jeg en fjederkonstant for den fjeder jeg arbejder med. 
+Dette gøres ved at måle samhørende værdier at udstrækning af fjederen og hvor stor en kraft den trækker med. 
+
+I dette forsøg har jeg opsat et lod i en fjeder, som set på figur \ref{fig:Forsogsopsaetning 1}.
+Derefter har jeg sat loddet i svingninger og målt loddets position med ultralydsensoren i en periode på $10$ sekunder. 
+Jeg gentog dette forsøg 10 gange. 
+
 
 \subsection{Hypotese}
 
