Hypotese til forsøg 1

--- a/Kapitel2/AndenOrdenKompleks.tex
+++ b/Kapitel2/AndenOrdenKompleks.tex
@@ -1,4 +1,5 @@
 \subsection{To komplekse rødder i karakterligningen}
+\label{teori: Komplekse losninger i karakterligningen}
 Jeg vil ikke føre fuldstændigt bevis for den fuldstændige løsning, når løsningerne til karakterligningen er komplekse. 
 Dette gør jeg ikke fordi at beviset minder meget om beviset for sætning \ref{thm: fuldstandig losning}.
 
