Added raw data for experiment 1

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -52,6 +52,12 @@ hvor $\phi$ er en eller anden konstant.
 
 
 \subsection{Data}
+Data til dette forsøg er vedlagt som bilag i filen ''Forsøg 1 - Data.pdf''
+Denne fil indeholder alt rådata opsamlet af ultralydsensoren i de 10 forsøg (OBS. filen er $130$ sider lang da der er blevet opsamlet $40$ målinger i sekundet). 
+Forsøg nummer 10 er placeret først grundet måden mit dataopsamlingsprogram fungerer på.
+
+Ydermere er der vedlagt en fil ved navn ''Forsøg 1 og 2 fjederkonstant - Data.pdf''.
+Denne fil indeholder data til bestemmelse af fjederkonstanten. 
 
 \subsection{Databehandling}
 
