--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -52,14 +52,36 @@ hvor $\phi$ er en eller anden konstant.
 
 
 \subsection{Data}
+\subsubsection{Svingning}
 Data til dette forsøg er vedlagt som bilag i filen ''Forsøg 1 - Data.pdf''
 Denne fil indeholder alt rådata opsamlet af ultralydsensoren i de 10 forsøg (OBS. filen er $130$ sider lang da der er blevet opsamlet $40$ målinger i sekundet). 
 Forsøg nummer 10 er placeret først grundet måden mit dataopsamlingsprogram fungerer på.
 
+\subsubsection{Fjederkonstant}
 Ydermere er der vedlagt en fil ved navn ''Forsøg 1 og 2 fjederkonstant - Data.pdf''.
 Denne fil indeholder data til bestemmelse af fjederkonstanten. 
 
+\subsubsection{Masse af fjeder og lod}
+Jeg har målt massen af lodet og af fjederen i forbindelse med forsøget. 
+Disse to er nedskrevet i tabel \ref{tabel: Masser forsog 1}.
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|}
+\hline 
+ & Masse ($g$) \\ 
+\hline 
+Fjeder & $77.09$ \\ 
+\hline 
+Lod & $32.45$ \\ 
+\hline 
+\end{tabular} 
+\caption{Relevante masser til forsøg 1.}
+\label{tabel: Masser forsog 1}
+\end{table}
+
 \subsection{Databehandling}
+For at tjekke hvor godt hypotesen holder, vil jeg forsøge at lægge få min computer til at lave en best-fit kurve udfra funktionen $x(t)=A\sin (\frac{k}{m}t+\phi) + c$.
+Det tilføjede $c$ for enden skyldes at loddet har hængt en afstand over ultralydsensoren som der skal justeres for. 
 
 \subsection{Konklusion}
 
